--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,6 +29,16 @@ builds:
     goarch: *goarch
     goarm: *goarm
 
+  - id: gh
+    main: cmd/gh/main.go
+    binary: executor_gh_{{ .Os }}_{{ .Arch }}
+
+    no_unique_dist_dir: true
+    env: *env
+    goos: *goos
+    goarch: *goarch
+    goarm: *goarm
+
 snapshot:
   name_template: 'v{{ .Version }}'
 
