Update templates, simplify raw indicator

--- a/x-templates/helm.yaml
+++ b/x-templates/helm.yaml
@@ -1,4 +1,4 @@
-interactive:
+templates:
   - command:
       prefix: "helm list"
       parser: "table"
@@ -15,27 +15,3 @@ interactive:
         Namespace:   {{ .Namespace }}
         Status:      {{ .Status }}
         Chart:       {{ .Chart }}
-
-#
-#  - command:
-#      prefix: "helm show"
-#      parser: "table"
-#    message:
-#      selects:
-#        - name: "Release"
-#          itemKey: "{{ .Namespace }}/{{ .Name }}"
-#          source: "helm list -A"
-#          onItemSelect:
-#            - name: "Version"
-#              itemKey: "{{ .REVISION }}"
-#              source: "helm history {{ .Value }}"
-#
-#      actions:
-#        run:  "helm rollback {{ .Name }} -n {{ .Namespace }} --version {{ .Version}}"
-#        delete: "helm delete    {{ .Name }} -n {{ .Namespace }}"
-#      preview: |
-#        Name:        {{ .Name }}
-#        Namespace:   {{ .Namespace }}
-#        Status:      {{ .Status }}
-#        Chart:       {{ .Chart }}
-#
