--- a/.github/workflows/pages-release.yml
+++ b/.github/workflows/pages-release.yml
@@ -36,10 +36,10 @@ jobs:
           cache: true
 
       - name: Build plugins binaries
-        uses: goreleaser/goreleaser-action@v3
+        uses: goreleaser/goreleaser-action@v5
         with:
+          install-only: true
           version: latest
-          args: build --clean
 
       - name: Build plugins and generate plugins index.yaml
         uses: magefile/mage-action@v3
@@ -84,7 +84,6 @@ jobs:
       - name: Publish GitHub release
         run: |
           mkdir public
-          mv plugin-dist/executor_* public/
           mv plugin-dist/source_* public/
           mv plugins-index.yaml public/
           mv index.html public/
