Change quickstart commands

--- a/assets/exec/templates/showcase.yaml
+++ b/assets/exec/templates/showcase.yaml
@@ -9,26 +9,70 @@ templates:
       header: "AI Quick Start tutorial"
       buttons:
         - name: "Run"
-          description: "{{BotName}} ai give me a list of pods in my kube-system namespace"
-          command: "{{BotName}} ai give me a list of pods in my kube-system namespace"
-          style: "primary"
-        - name: "Ask AI about Pods"
           description: "{{BotName}} ai what is a pod?"
           command: "{{BotName}} ai what is a pod?"
           style: "primary"
         - name: "Run"
-          description: "👉`  Create a failing Pod in the 'default' namespace to trigger a Kubernetes notification. Click 'AI Help' to see the AI assistant in action. ` "
-          command: "{{BotName}} kubectl run webapp --image=mszostok/webapp:v1.8.0 -n default"
-          style: "primary"
-        - name: "Check cluster with AI"
-          description: "{{BotName}} ai are there any failing pods in my default namespace?"
-          command: "{{BotName}} ai are there any failing pods in my default namespace?"
-          style: "primary"
-        - name: "Debug Pod logs"
-          description: "{{BotName}} ai check the logs for the failing pod in the default namespace and tell me what is wrong with it"
-          command: "{{BotName}} ai check the logs for the failing pod in the default namespace and tell me what is wrong with it"
+          description: "{{BotName}} ai how many apps I have deployed across all my namespaces"
+          command: "{{BotName}} ai how many apps I have deployed across all my namespaces"
           style: "primary"
         - name: "Run"
-          description: "👉`  Clean-up resources created by the previous command. `"
+          description: "{{BotName}} ai what is the state of my cluster?"
+          command: "{{BotName}} ai what is the state of my cluster?"
+          style: "primary"
+        - name: "Run"
+          description: "{{BotName}} ai is the enough memory to run a Java application that will consume up to 5GB?"
+          command: "{{BotName}} ai is the enough memory to run a Java application that will consume up to 5GB?"
+          style: "primary"
+        - name: "Run"
+          description: "{{BotName}} ai how could I optimize that?"
+          command: "{{BotName}} ai how could I optimize that?"
+          style: "primary"
+        - name: "Run"
+          description: "{{BotName}} ai create a post-mortem for this incident"
+          command: "{{BotName}} ai create a post-mortem for this incident"
+          style: "primary"
+
+  - trigger:
+      command:
+        prefix: "manifests"
+    type: "tutorial"
+    message:
+      paginate:
+        page: 8
+      header: "Deploy example manifests"
+      buttons:
+        - name: "Run"
+          description: "👉`  Deploy web app `🚨 "
+          command: "{{BotName}} kubectl run webapp --image=mszostok/webapp:v1.8.0 -n default"
+          style: "primary"
+        - name: "Run"
+          description: "👉`  Clean-up resources created by the previous command `🗑️"
           command: "{{BotName}} kubectl delete po webapp -n default"
+          style: "primary"
+        - name: "Run"
+          description: "👉`  Create a Backup Job `🚨 "
+          command: "{{BotName}} kubectl apply -f https://gist.github.com/mszostok/28e3b5fa04a543196555144cf7d28cc0/raw -n default"
+          style: "primary"
+        - name: "Run"
+          description: "👉`  Clean-up a Backup Job `🗑️"
+          command: "{{BotName}} kubectl delete -f https://gist.github.com/mszostok/28e3b5fa04a543196555144cf7d28cc0/raw -n default"
+          style: "primary"
+
+  - trigger:
+      command:
+        prefix: "clis"
+    type: "tutorial"
+    message:
+      paginate:
+        page: 8
+      header: "Install CLIs"
+      buttons:
+        - name: "Run"
+          description: "👉`  Install `kubectl"
+          command: "{{BotName}} x install https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl"
+          style: "primary"
+        - name: "Run"
+          description: "👉`  Install `helm️"
+          command: "{{BotName}} x install https://get.helm.sh/helm-v3.10.3-linux-amd64.tar.gz --file helm"
           style: "primary"
